# aula19_bootcamp

./: Dockerfile  README.md  main.py  pyproject.toml  schema.py  test.db
